removed some padidng from the learning section

--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -27,9 +27,9 @@
 
 .learning {
   text-align: center;
-  padding: 3.2rem 0;
+  padding-top: 3.2rem;
 
   &__container {
-    margin: 3.2rem 0;
+    padding-top: 3.2rem;
   }
 }
