--- a/css/style.css
+++ b/css/style.css
@@ -89,9 +89,9 @@ body {
 
 .learning {
   text-align: center;
-  padding: 3.2rem 0; }
+  padding-top: 3.2rem; }
   .learning__container {
-    margin: 3.2rem 0; }
+    padding-top: 3.2rem; }
 
 .navigation {
   height: 6.5rem;
@@ -129,7 +129,7 @@ body {
   width: calc(100%/4);
   display: inline-block;
   border: 1px solid black;
-  margin: 0 3.2rem; }
+  margin: 0 1.6rem; }
   .box__img-container {
     width: 100%;
     margin-bottom: 1.6rem; }
