--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -2,8 +2,29 @@ body {
   font-family: lato, sans-serif;
   font-weight: 400;
   line-height: 1.3;
-  color: #6e6e6e;
+  color: $light-text-color;
 }
+
+
+.nav {
+
+  &__span {
+    font-size: 2rem;
+    text-transform: uppercase;
+  }
+
+  &__navigation {
+    font-size: 1.5rem;
+    font-weight: 300;
+    margin: 0 .8rem;
+    text-decoration: none;
+
+    &:link, &:visited {
+      color: $light-text-color;
+    }
+  }
+}
+
 
 .paragraph {
   font-size: 1.5rem;
@@ -11,6 +32,7 @@ body {
 
   &__small {
     font-size: 1.5rem;
+    font-weight: 300;
     margin: .8rem 0;
   }
 
@@ -32,6 +54,12 @@ body {
  .heading-2 {
    font-size: 3rem;
    font-weight: 700;
+
+   &--center {
+     padding-top: 3.2rem;
+     display: block;
+     text-align: center;
+   }
  }
 
  .heading-3 {
@@ -51,4 +79,16 @@ body {
    font-size: 1.5rem;
    font-weight: 400;
    text-decoration: none;
+
+   // &:link, &:visited {
+   //   color: #eee;
+   // }
+ }
+
+ .footer {
+   font-size: 1.2rem;
+
+   &__span {
+     margin: 0 1rem;
+   }
  }
