--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -3,6 +3,7 @@
   background-color: $main-color;
   display: flex;
   flex-direction: row;
+  padding-top: 6.4rem;
 
   &__banner {
     width: 100%;
