--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -1,5 +1,23 @@
-.navigation {
-  height: 6.5rem;
+.nav {
+  width: 100%;
+  height: 6.4rem;
   background-color: white;
   border-bottom: 1px solid black;
+  padding: 0 2.4rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  position: fixed;
+  z-index: 10;
+  backface-visibility: hidden;
+
+  &__logo-container {
+    display: flex;
+    align-items: center;
+  }
+
+  &__logo {
+    height: 4.5rem;
+  }
 }
