--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,6 +13,8 @@
 @import "layout/navigation";
 @import "layout/header";
 @import "layout/columns";
+@import "layout/footer";
 
 @import "components/button";
 @import "components/box";
+@import "components/small-content";
