--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -6,30 +6,33 @@
     width: 100%;
   }
 
-  &__small-content {
-    display: flex;
-    align-items: center;
-  }
-
-  &__small-img-container {
-    min-width: 35%;
-  }
-
   &__small-img {
     width: 100%;
-  }
-
-  &__small-content-info {
-    width: 100%;
-    padding: 1rem 2rem;
   }
 }
 
 .learning {
-  text-align: center;
-  padding-top: 3.2rem;
+  background-color: lightblue;
 
   &__container {
-    padding-top: 3.2rem;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    margin-top: 3.2rem;
+  }
+}
+
+.thesis {
+  background-color: $main-color;
+
+  &__flex-container {
+    display: flex;
+    flex-direction: row;
+  }
+
+  &__video {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
   }
 }
