--- a/sass/components/_box.scss
+++ b/sass/components/_box.scss
@@ -1,8 +1,9 @@
 .box {
   width: calc(100%/4);
   display: inline-block;
-  border: 1px solid black;
+  border: 1px solid $light-gray;
   margin: 0 1.6rem;
+  @include border-radius;
 
   &__img-container {
     width: 100%;
