--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -1,1 +1,11 @@
+@mixin border-radius {
+  border-radius: 2px;
+  overflow: hidden;
+}
+@mixin shadow {
+  box-shadow: 0 .5rem 1rem 0 rgba(0, 0, 0, .35);
+}
 
+@mixin thin-line {
+  background-color: $main-color;
+}
