--- a/css/style.css
+++ b/css/style.css
@@ -12,65 +12,114 @@ body {
 body {
   font-family: lato, sans-serif;
   font-weight: 400;
-  line-height: 1.3;
-  color: #6e6e6e; }
+  line-height: 1.3; }
 
-.nav__span {
+.nav__text-logo-container {
+  border-top: 1px solid #23B1A5;
+  border-bottom: 1px solid #23B1A5; }
+
+.nav__text-logo {
   font-size: 2rem;
   text-transform: uppercase; }
+  .nav__text-logo--2 {
+    color: #2980B9; }
+  .nav__text-logo--1 {
+    color: #DE3C3C; }
 
 .nav__navigation {
   font-size: 1.5rem;
-  font-weight: 300;
+  font-weight: 400;
   margin: 0 .8rem;
-  text-decoration: none; }
+  text-decoration: none;
+  color: #23B1A5; }
   .nav__navigation:link, .nav__navigation:visited {
-    color: #6e6e6e; }
+    color: #23B1A5; }
 
 .paragraph {
   font-size: 1.5rem;
-  font-weight: 300; }
+  font-weight: 400;
+  color: #4f4f4f; }
   .paragraph__small {
     font-size: 1.5rem;
     font-weight: 300;
-    margin: .8rem 0; }
+    margin: .8rem 0;
+    color: #4f4f4f; }
   .paragraph__reference {
-    font-size: 1.2rem; }
+    font-size: 1.2rem;
+    color: #4f4f4f; }
 
 .heading-1 {
   font-size: 4rem;
-  font-weight: 700; }
+  font-weight: 700;
+  color: #ffffff; }
   .heading-1__paragraph {
     font-size: 2rem;
-    font-weight: 400; }
+    font-weight: 400;
+    color: #ffffff; }
 
 .heading-2 {
   font-size: 3rem;
-  font-weight: 700; }
-  .heading-2--center {
-    padding-top: 3.2rem;
+  font-weight: 700;
+  color: #23B1A5; }
+  .heading-2--center-1 {
+    padding: 3.2rem 0;
     display: block;
-    text-align: center; }
+    text-align: center;
+    position: relative; }
+    .heading-2--center-1::before {
+      content: "";
+      width: 60%;
+      height: .1rem;
+      margin-left: 2.4rem;
+      background-color: #23B1A5;
+      position: absolute;
+      top: 0;
+      left: 0; }
+  .heading-2--center-2 {
+    padding: 3.2rem 0;
+    display: block;
+    text-align: center;
+    position: relative; }
+    .heading-2--center-2::before {
+      content: "";
+      width: 95.2%;
+      height: .1rem;
+      margin-left: 2.4rem;
+      background-color: #23B1A5;
+      position: absolute;
+      top: 0;
+      left: 0; }
 
 .heading-3 {
   font-size: 2rem;
-  font-weight: 400; }
+  font-weight: 400;
+  color: #4f4f4f; }
+  .heading-3--video {
+    color: #23B1A5; }
   .heading-3__span {
-    font-size: 2rem;
+    font-size: 1.8rem;
     font-weight: 300;
     text-transform: uppercase;
     display: block;
-    margin-bottom: .8rem; }
+    color: #4f4f4f; }
 
 .read-more {
   font-size: 1.5rem;
   font-weight: 400;
-  text-decoration: none; }
+  text-decoration: none;
+  display: block;
+  position: relative; }
+  .read-more:link, .read-more:visited {
+    color: #23B1A5; }
 
 .footer {
-  font-size: 1.2rem; }
-  .footer__span {
+  font-size: 1.2rem;
+  color: #ffffff; }
+  .footer__link {
     margin: 0 1rem; }
+    .footer__link:link, .footer__link:visited {
+      color: #ffffff;
+      text-decoration: none; }
 
 .u-4-side-margin {
   margin: 3.2rem 2.4rem !important; }
@@ -86,37 +135,96 @@ body {
 .u-margin-bottom-small {
   margin-bottom: .8rem !important; }
 
+.nav__img-container {
+  animation: scaler 800ms ease-out; }
+
+@keyframes scaler {
+  0% {
+    transform: translateX(-5.2rem); }
+  100% {
+    transform: translateX(0); } }
+
+.nav__logo {
+  animation: rotation 800ms ease-out; }
+
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg) scale(0); }
+  100% {
+    transform: rotate(360deg) scale(1); } }
+
+.nav__text-logo-container {
+  animation: movement 600ms cubic-bezier(0.165, 0.84, 0.44, 1) 800ms; }
+
+@keyframes movement {
+  from {
+    transform: translateX(0); }
+  to {
+    transform: translateX(3rem); } }
+
+.nav__navigation {
+  position: relative;
+  padding: 1rem 0; }
+  .nav__navigation::before {
+    content: "";
+    width: 0;
+    height: .3rem;
+    background-color: #23B1A5;
+    position: absolute;
+    top: 0;
+    left: 0;
+    transition: all 300ms ease-in-out; }
+  .nav__navigation:hover::before {
+    width: 100%; }
+
+.btn {
+  box-shadow: 0 0.5rem 1.5rem 0 rgba(0, 0, 0, 0.4);
+  transition: all 200ms; }
+  .btn:hover {
+    transform: translateY(-5%);
+    box-shadow: 0 1rem 2rem 0 rgba(0, 0, 0, 0.4); }
+  .btn:active {
+    transform: translateY(0);
+    box-shadow: 0 0.5rem 1.5rem 0 rgba(0, 0, 0, 0.4); }
+
 .about {
   display: flex;
   flex-direction: row; }
   .about__img {
-    width: 100%; }
+    width: 100%;
+    box-shadow: 0 0.5rem 1rem 0 rgba(0, 0, 0, 0.35);
+    border-radius: 2px;
+    overflow: hidden; }
   .about__small-img {
     width: 100%; }
 
 .learning {
-  background-color: lightblue; }
+  background-color: white;
+  color: #23B1A5; }
   .learning__container {
     display: flex;
     flex-flow: row wrap;
-    justify-content: center;
-    margin-top: 3.2rem; }
+    justify-content: center; }
 
-.thesis {
-  background-color: #d9d7d7; }
-  .thesis__flex-container {
-    display: flex;
-    flex-direction: row; }
-  .thesis__video {
-    width: 100%;
-    height: 100%;
-    object-fit: cover; }
+.thesis__right-side {
+  margin: 0 2.4rem 3.2rem 2.4rem; }
+
+.thesis__flex-container {
+  display: flex;
+  flex-direction: row; }
+
+.thesis__video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  box-shadow: 0 0.5rem 1rem 0 rgba(0, 0, 0, 0.35);
+  border-radius: 2px;
+  overflow: hidden; }
 
 .nav {
   width: 100%;
   height: 6.4rem;
-  background-color: white;
-  border-bottom: 1px solid black;
+  background-color: #ffffff;
   padding: 0 2.4rem;
   display: flex;
   flex-direction: row;
@@ -124,7 +232,8 @@ body {
   align-items: center;
   position: fixed;
   z-index: 10;
-  backface-visibility: hidden; }
+  backface-visibility: hidden;
+  border-bottom: 1px solid #d0d0d0; }
   .nav__logo-container {
     display: flex;
     align-items: center; }
@@ -133,12 +242,15 @@ body {
 
 .header {
   width: 100%;
-  background-color: #d9d7d7;
+  background-color: #23B1A5;
   display: flex;
   flex-direction: row;
   padding-top: 6.4rem; }
   .header__banner {
-    width: 100%; }
+    width: 100%;
+    box-shadow: 0 0.5rem 1rem 0 rgba(0, 0, 0, 0.35);
+    border-radius: 2px;
+    overflow: hidden; }
   .header__right-side {
     display: flex;
     align-items: center;
@@ -149,30 +261,36 @@ body {
 
 .secondary-column {
   width: 40%; }
+  .secondary-column--side {
+    background-color: #FFDD7E; }
 
 .footer {
-  height: 8rem;
+  height: 15rem;
   padding: 1.6rem 2.4rem;
-  background-color: white;
-  border-top: 1px solid black;
+  background-color: #23B1A5;
   display: flex;
   flex-direction: row;
+  align-items: center;
   justify-content: space-between; }
 
 .btn {
   display: block;
-  background-color: lightblue;
+  background-color: #FFDD7E;
   padding: 1.5rem 2rem;
   font-size: 2rem;
   text-decoration: none;
   text-align: center;
-  color: white; }
+  color: #23B1A5;
+  border-radius: 2px;
+  overflow: hidden; }
 
 .box {
   width: calc(100%/4);
   display: inline-block;
-  border: 1px solid black;
-  margin: 0 1.6rem; }
+  border: 1px solid #d0d0d0;
+  margin: 0 1.6rem;
+  border-radius: 2px;
+  overflow: hidden; }
   .box__img-container {
     width: 100%;
     margin-bottom: 1.6rem; }
@@ -184,7 +302,25 @@ body {
 
 .small-content {
   display: flex;
-  align-items: center; }
+  align-items: center;
+  position: relative; }
+  .small-content::before {
+    content: "";
+    width: 57%;
+    height: .1rem;
+    background-color: #23B1A5;
+    position: absolute;
+    top: 0;
+    right: 0; }
+  .small-content::after {
+    content: "";
+    width: 57%;
+    height: .1rem;
+    background-color: #23B1A5;
+    position: absolute;
+    bottom: 0;
+    right: 0; }
   .small-content--info {
     width: 100%;
-    padding: 1rem 2rem; }
+    padding: 1rem 2rem;
+    position: relative; }
