--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,9 +1,9 @@
 .footer {
-  height: 8rem;
+  height: 15rem;
   padding: 1.6rem 2.4rem;
-  background-color: white;
-  border-top: 1px solid black;
+  background-color: $main-color;
   display: flex;
   flex-direction: row;
+  align-items: center;
   justify-content: space-between;
 }
