--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -1,8 +1,7 @@
 .nav {
   width: 100%;
   height: 6.4rem;
-  background-color: white;
-  border-bottom: 1px solid black;
+  background-color: $secondary-color;
   padding: 0 2.4rem;
   display: flex;
   flex-direction: row;
@@ -11,6 +10,7 @@
   position: fixed;
   z-index: 10;
   backface-visibility: hidden;
+  border-bottom: 1px solid $light-gray;
 
   &__logo-container {
     display: flex;
