--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -4,26 +4,32 @@
 
   &__img {
     width: 100%;
+    @include shadow;
+    @include border-radius;
   }
 
   &__small-img {
     width: 100%;
+    // @include border-radius;
   }
 }
 
 .learning {
-  background-color: lightblue;
+  background-color: white;
+  color: #23B1A5;
 
   &__container {
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
-    margin-top: 3.2rem;
   }
 }
 
 .thesis {
-  background-color: $main-color;
+
+  &__right-side {
+    margin: 0 2.4rem 3.2rem 2.4rem;
+  }
 
   &__flex-container {
     display: flex;
@@ -34,5 +40,7 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+    @include shadow;
+    @include border-radius;
   }
 }
