--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -1,3 +1,9 @@
 //Colors
-$main-color:#d9d7d7;
-$light-text-color: #6e6e6e;
+$main-color:#23B1A5;
+$secondary-color:#ffffff;
+$tertiary-color: #FFDD7E;
+
+$light-gray: #d0d0d0;
+$dark-gray: #4f4f4f;
+
+// $tertiary-color:#FEF4A9;
