--- a/css/style.css
+++ b/css/style.css
@@ -29,9 +29,10 @@ body {
 .nav__navigation {
   font-size: 1.5rem;
   font-weight: 400;
-  margin: 0 .8rem;
   text-decoration: none;
   color: #23B1A5; }
+  .nav__navigation:not(:last-child) {
+    margin-right: .8rem; }
   .nav__navigation:link, .nav__navigation:visited {
     color: #23B1A5; }
 
