--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -13,7 +13,6 @@ body {
   &__text-logo {
     font-size: 2rem;
     text-transform: uppercase;
-    // text-decoration: underline;
 
     &--2 {
       color: #2980B9;
@@ -26,9 +25,13 @@ body {
   &__navigation {
     font-size: 1.5rem;
     font-weight: 400;
-    margin: 0 .8rem;
+    // margin: 0 .8rem;
     text-decoration: none;
     color: $main-color;
+
+    &:not(:last-child) {
+      margin-right: .8rem;
+    }
 
     &:link, &:visited {
       color: $main-color;
