--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -25,7 +25,6 @@ body {
   &__navigation {
     font-size: 1.5rem;
     font-weight: 400;
-    // margin: 0 .8rem;
     text-decoration: none;
     color: $main-color;
 
@@ -137,7 +136,7 @@ body {
    position: relative;
 
    &:link, &:visited {
-     color: $main-color;
+     color: #2980B9;
   }
 }
 
