--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -5,6 +5,6 @@
   font-size: 2rem;
   text-decoration: none;
   text-align: center;
-  color: $main-color;
+  color: $dark-gray;
   @include border-radius;
 }
