--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+/* MEDIA QUERY MANAGER
+
+0 - 600px:  phone
+*/
 *, *::before, *::after {
   padding: 0;
   margin: 0;
@@ -5,6 +9,9 @@
 
 html {
   font-size: 62.5%; }
+  @media only screen and (max-width: 56.25em) {
+    html {
+      font-size: 55%; } }
 
 body {
   box-sizing: border-box; }
@@ -21,6 +28,9 @@ body {
 .nav__text-logo {
   font-size: 2rem;
   text-transform: uppercase; }
+  @media only screen and (max-width: 56.25em) {
+    .nav__text-logo {
+      display: none; } }
   .nav__text-logo--2 {
     color: #2980B9; }
   .nav__text-logo--1 {
@@ -31,6 +41,9 @@ body {
   font-weight: 400;
   text-decoration: none;
   color: #23B1A5; }
+  @media only screen and (max-width: 56.25em) {
+    .nav__navigation {
+      display: none; } }
   .nav__navigation:not(:last-child) {
     margin-right: .8rem; }
   .nav__navigation:link, .nav__navigation:visited {
@@ -40,6 +53,9 @@ body {
   font-size: 1.5rem;
   font-weight: 400;
   color: #4f4f4f; }
+  @media only screen and (max-width: 56.25em) {
+    .paragraph {
+      display: none; } }
   .paragraph__small {
     font-size: 1.5rem;
     font-weight: 300;
@@ -76,6 +92,9 @@ body {
       position: absolute;
       top: 0;
       left: 0; }
+      @media only screen and (max-width: 56.25em) {
+        .heading-2--center-1::before {
+          display: none; } }
   .heading-2--center-2 {
     padding: 3.2rem 0;
     display: block;
@@ -90,13 +109,22 @@ body {
       position: absolute;
       top: 0;
       left: 0; }
+      @media only screen and (max-width: 56.25em) {
+        .heading-2--center-2::before {
+          display: none; } }
 
 .heading-3 {
   font-size: 2rem;
   font-weight: 400;
   color: #4f4f4f; }
+  @media only screen and (max-width: 56.25em) {
+    .heading-3 {
+      font-size: 5vw; } }
   .heading-3--video {
     color: #23B1A5; }
+    @media only screen and (max-width: 56.25em) {
+      .heading-3--video {
+        display: none; } }
   .heading-3__span {
     font-size: 1.8rem;
     font-weight: 300;
@@ -118,12 +146,18 @@ body {
   color: #ffffff; }
   .footer__link {
     margin: 0 1rem; }
+    @media only screen and (max-width: 56.25em) {
+      .footer__link {
+        display: none; } }
     .footer__link:link, .footer__link:visited {
       color: #ffffff;
       text-decoration: none; }
 
 .u-4-side-margin {
   margin: 3.2rem 2.4rem !important; }
+  @media only screen and (max-width: 56.25em) {
+    .u-4-side-margin {
+      margin: 0 !important; } }
   .u-4-side-margin--small {
     margin: 3.2rem 1.6rem !important; }
 
@@ -138,6 +172,9 @@ body {
 
 .nav__img-container {
   animation: scaler 800ms ease-out; }
+  @media only screen and (max-width: 56.25em) {
+    .nav__img-container {
+      animation: none; } }
 
 @keyframes scaler {
   0% {
@@ -147,6 +184,9 @@ body {
 
 .nav__logo {
   animation: rotation 800ms ease-out; }
+  @media only screen and (max-width: 56.25em) {
+    .nav__logo {
+      animation: none; } }
 
 @keyframes rotation {
   0% {
@@ -155,12 +195,10 @@ body {
     transform: rotate(360deg) scale(1); } }
 
 .nav__text-logo-container {
-  animation: movement 600ms cubic-bezier(0.165, 0.84, 0.44, 1) 800ms; }
+  animation: movement 800ms cubic-bezier(0.165, 0.84, 0.44, 1) 800ms; }
 
 @keyframes movement {
-  from {
-    transform: translateX(0); }
-  to {
+  50% {
     transform: translateX(3rem); } }
 
 .nav__navigation {
@@ -191,6 +229,12 @@ body {
 .about {
   display: flex;
   flex-direction: row; }
+  @media only screen and (max-width: 56.25em) {
+    .about__right-side {
+      width: 100vw; } }
+  @media only screen and (max-width: 56.25em) {
+    .about__left-side {
+      display: none; } }
   .about__img {
     width: 100%;
     box-shadow: 0 0.5rem 1rem 0 rgba(0, 0, 0, 0.35);
@@ -198,6 +242,15 @@ body {
     overflow: hidden; }
   .about__small-img {
     width: 100%; }
+    @media only screen and (max-width: 56.25em) {
+      .about__small-img {
+        display: none; } }
+    .about__small-img--mobile {
+      display: none; }
+      @media only screen and (max-width: 56.25em) {
+        .about__small-img--mobile {
+          display: block;
+          width: 100%; } }
 
 .learning {
   background-color: white;
@@ -206,9 +259,20 @@ body {
     display: flex;
     flex-flow: row wrap;
     justify-content: center; }
+    @media only screen and (max-width: 56.25em) {
+      .learning__container {
+        flex-direction: column;
+        padding: 0 1.6rem; } }
 
 .thesis__right-side {
   margin: 0 2.4rem 3.2rem 2.4rem; }
+  @media only screen and (max-width: 56.25em) {
+    .thesis__right-side {
+      margin: 0 !important; } }
+
+@media only screen and (max-width: 56.25em) {
+  .thesis__left-side {
+    display: none; } }
 
 .thesis__flex-container {
   display: flex;
@@ -235,11 +299,28 @@ body {
   z-index: 10;
   backface-visibility: hidden;
   border-bottom: 1px solid #d0d0d0; }
+  @media only screen and (max-width: 56.25em) {
+    .nav {
+      display: block;
+      padding: 0; } }
   .nav__logo-container {
     display: flex;
     align-items: center; }
+  @media only screen and (max-width: 56.25em) {
+    .nav__img-container {
+      width: 100%;
+      height: 6.4rem;
+      display: flex;
+      justify-content: space-around;
+      align-items: center; } }
   .nav__logo {
     height: 4.5rem; }
+    .nav__logo--phone {
+      display: none; }
+      @media only screen and (max-width: 56.25em) {
+        .nav__logo--phone {
+          display: inline-block;
+          height: 4.5rem; } }
 
 .header {
   width: 100%;
@@ -247,6 +328,10 @@ body {
   display: flex;
   flex-direction: row;
   padding-top: 6.4rem; }
+  @media only screen and (max-width: 56.25em) {
+    .header {
+      display: flex;
+      flex-direction: column; } }
   .header__banner {
     width: 100%;
     box-shadow: 0 0.5rem 1rem 0 rgba(0, 0, 0, 0.35);
@@ -256,12 +341,23 @@ body {
     display: flex;
     align-items: center;
     padding-right: 8rem; }
+    @media only screen and (max-width: 56.25em) {
+      .header__right-side {
+        padding: 3.2rem 1.6rem;
+        display: flex;
+        justify-content: center; } }
 
 .main-column {
   max-width: 60%; }
+  @media only screen and (max-width: 56.25em) {
+    .main-column {
+      max-width: 100%; } }
 
 .secondary-column {
   width: 40%; }
+  @media only screen and (max-width: 56.25em) {
+    .secondary-column {
+      width: 100%; } }
   .secondary-column--side {
     background-color: #FFDD7E; }
 
@@ -273,6 +369,12 @@ body {
   flex-direction: row;
   align-items: center;
   justify-content: space-between; }
+  @media only screen and (max-width: 56.25em) {
+    .footer {
+      display: flex;
+      height: 5rem;
+      text-align: center;
+      justify-content: center; } }
 
 .btn {
   display: block;
@@ -292,19 +394,37 @@ body {
   margin: 0 1.6rem;
   border-radius: 2px;
   overflow: hidden; }
+  @media only screen and (max-width: 56.25em) {
+    .box {
+      width: 100%;
+      margin: 0 0 .8rem 0 !important;
+      background-color: #e1f5f0; } }
   .box__img-container {
     width: 100%;
     margin-bottom: 1.6rem; }
   .box__img {
     width: 100%; }
+    @media only screen and (max-width: 56.25em) {
+      .box__img {
+        display: none; } }
   .box__text-container {
     padding: 0 3rem 2.4rem 1.6rem;
     text-align: left; }
+    @media only screen and (max-width: 56.25em) {
+      .box__text-container {
+        padding: 1.6rem 1rem; }
+        .box__text-container :first-child {
+          margin-left: 1.6rem; }
+        .box__text-container :not(h3) {
+          display: none; } }
 
 .small-content {
   display: flex;
   align-items: center;
   position: relative; }
+  @media only screen and (max-width: 56.25em) {
+    .small-content {
+      display: block; } }
   .small-content::before {
     content: "";
     width: 57%;
@@ -313,6 +433,9 @@ body {
     position: absolute;
     top: 0;
     right: 0; }
+    @media only screen and (max-width: 56.25em) {
+      .small-content::before {
+        display: none; } }
   .small-content::after {
     content: "";
     width: 57%;
@@ -321,6 +444,9 @@ body {
     position: absolute;
     bottom: 0;
     right: 0; }
+    @media only screen and (max-width: 56.25em) {
+      .small-content::after {
+        display: none; } }
   .small-content--info {
     width: 100%;
     padding: 1rem 2rem;
