--- a/sass/base/_animations.scss
+++ b/sass/base/_animations.scss
@@ -2,7 +2,10 @@
 
   &__img-container {
     animation: scaler 800ms ease-out;
-  }
+    @include phones {
+      animation: none;
+     }
+    }
 
   @keyframes scaler {
     0% {
@@ -16,9 +19,13 @@
 
   &__logo {
     animation: rotation 800ms ease-out;
+    @include phones {
+      animation: none;
+    }
   }
 
   @keyframes rotation {
+
     0% {
      transform: rotate(0deg) scale(0);
     }
@@ -29,16 +36,20 @@
   }
 
   &__text-logo-container {
-    animation: movement 600ms cubic-bezier(0.165, 0.84, 0.44, 1) 800ms;
+    animation: movement 800ms cubic-bezier(0.165, 0.84, 0.44, 1) 800ms;
 
     @keyframes movement {
-      from {
-        transform: translateX(0);
-      }
+      // 0% {
+      //   transform: translateX(0);
+      // }
 
-      to {
+      50% {
         transform: translateX(3rem);
       }
+
+      // 100% {
+      //   transform: translateX(3rem);
+      // }
     }
   }
 
