--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -1,6 +1,10 @@
 .u-4-side-margin {
   margin: 3.2rem 2.4rem !important;
 
+  @include phones {
+    margin: 0 !important;
+  }
+
   &--small {
     margin: 3.2rem 1.6rem !important;
   }
