--- a/sass/components/_box.scss
+++ b/sass/components/_box.scss
@@ -5,6 +5,12 @@
   margin: 0 1.6rem;
   @include border-radius;
 
+  @include phones {
+    width: 100%;
+    margin: 0 0 .8rem 0 !important;
+      background-color: #e1f5f0;
+  }
+
   &__img-container {
     width: 100%;
     margin-bottom: 1.6rem;
@@ -12,10 +18,19 @@
 
   &__img {
     width: 100%;
+    @include phones {
+      display: none;
+    }
   }
 
   &__text-container {
     padding: 0 3rem 2.4rem 1.6rem;
     text-align: left;
+
+    @include phones {
+      padding: 1.6rem 1rem;
+      :first-child {margin-left: 1.6rem;}
+      :not(h3) {display: none;}
+    }
   }
 }
