--- a/sass/layout/_columns.scss
+++ b/sass/layout/_columns.scss
@@ -1,9 +1,17 @@
 .main-column {
   max-width: 60%;
+
+  @include phones {
+    max-width: 100%;
+  }
 }
 
 .secondary-column {
   width: 40%;
+
+  @include phones {
+    width: 100%;
+  }
 
   &--side {
     background-color: $tertiary-color;
