--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -6,4 +6,11 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
+
+  @include phones {
+    display: flex;
+    height: 5rem;
+    text-align: center;
+    justify-content: center;
+  }
 }
