--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -12,12 +12,37 @@
   backface-visibility: hidden;
   border-bottom: 1px solid $light-gray;
 
+  @include phones {
+    display: block;
+    padding: 0;
+  }
+
   &__logo-container {
     display: flex;
     align-items: center;
   }
 
+  &__img-container {
+
+    @include phones {
+      width: 100%;
+      height: 6.4rem;
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+    }
+  }
+
   &__logo {
     height: 4.5rem;
+
+    &--phone {
+      display: none;
+
+      @include phones {
+        display: inline-block;
+        height: 4.5rem;
+      }
+    }
   }
 }
