--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -5,10 +5,14 @@
 }
 
 html {
-  font-size: 62.5%;
+  font-size: 62.5%; // 10px
 
   @include phones {
-    font-size: 55%;
+    font-size: 50%; // 8px
+  }
+
+  @include big-screen {
+    font-size: 75%; //12px 
   }
 }
 
